# dmt_project

./: .gitignore  README.md  setup.bash
arduino/frame_rosserial/: Frame_rosserialCyrus  frame_rosserial.ino
catkin_ws/src/cynaptix/: CMakeLists.txt  frames.gv  glove_position_node.cpp  glove_tracking_node.cpp  led_detector_node.cpp  package.xml  setup.py
catkin_ws/src/cynaptix/camera/: camera_callibration.ini
catkin_ws/src/cynaptix/include/: object_tracker.hpp  pose_calculator.hpp  pose_calculator_3d.hpp
catkin_ws/src/cynaptix/include/glove_position/: maths.hpp  pose_finder.hpp  ray_intersector.hpp
catkin_ws/src/cynaptix/include/led_detector/: led_detector.hpp  led_point.hpp  point_picker.hpp
catkin_ws/src/cynaptix/launch/: cynaptix.launch  cynaptix_v2.launch  glove_tracking.launch  networking.launch
catkin_ws/src/cynaptix/msg/: FrameMeasuredData.msg  FrameTarget.msg  GloveMeasuredData.msg  GloveTarget.msg  LedRayArray.msg
catkin_ws/src/cynaptix/rviz/: cynaptix.rviz
catkin_ws/src/cynaptix/scripts/: camera_exposure_setup.bash  frame_connection_point.py  glove_connection_point.py  main_control.py  main_control_node.py
catkin_ws/src/cynaptix/scripts/frame_connection/: message_processor.py
catkin_ws/src/cynaptix/scripts/glove_connection/: message_processor.py
catkin_ws/src/cynaptix/scripts/main_control/: frame.py  glove.py  pose.py
catkin_ws/src/cynaptix/scripts/tests/: frame_test_client.py  glove_test_client.py
catkin_ws/src/cynaptix/src/: object_tracker.cpp  pose_calculator.cpp  pose_calculator_3d.cpp
catkin_ws/src/cynaptix/src/glove_position/: maths.cpp  pose_finder.cpp  ray_intersector.cpp
catkin_ws/src/cynaptix/src/led_detector/: led_detector.cpp  point_picker.cpp
feature_recognition_test/: camera_callibration_data.txt  main.cpp
feature_recognition_test/src/: camera.cpp
led_tracker_final/: CMakeLists.txt  main.cpp
led_tracker_final/debug_tests/: ray_intersection_test.cpp  rotation_matrix_test.cpp
led_tracker_final/include/: camera.hpp  led_tracker.hpp  led_tracker_2d.hpp  led_tracker_3d.hpp
led_tracker_final/src/: camera.cpp  led_tracker.cpp  led_tracker_2d.cpp  led_tracker_3d.cpp
mbed/: FSR.cpp  FSR.h  main.cpp
mbed/cynaptix_mbed/: command_processor.cpp  command_processor.h  main.cpp  makefile  tactile_controller.h  web_client.cpp  web_client.h
mbed/cynaptix_mbed/Kinesthetics/: kinesthetic_controller.cpp  kinesthetic_controller.h  kinesthetix.cpp  kinesthetix.h
mbed/cynaptix_mbed/Tactile/: drv2605.cpp  drv2605.h  multiplexer.cpp  multiplexer.h  tactile_controller.cpp  tactile_controller.h
mbed/cynaptix_mbed/Web/: command_processor.cpp  command_processor.h  messages.h  web_client.cpp  web_client.h
mbed/encoder_test/: encoder_test.cpp  makefile
mbed/encoder_test/NUCLEO_F303K8/: encoder_test.disasm  encoder_test.elf  encoder_test.hex
mbed/erm_test/: erm_test.cpp  makefile
mbed/erm_test/NUCLEO_F303K8/: erm_test.d  erm_test.disasm  erm_test.elf  erm_test.hex  gcc4mbed.d
mbed/esp8266_setup/: esp8266_setup.cpp  makefile
mbed/esp8266_setup/NUCLEO_F303K8/: esp8266_setup.disasm  esp8266_setup.elf  esp8266_setup.hex
mbed/esp8266_test/: esp8266_test.cpp  makefile
mbed/esp8266_test/NUCLEO_F303K8/: esp8266_test.disasm  esp8266_test.elf  esp8266_test.hex
mbed/i2c_test/: drv2605.cpp  drv2605.h  i2c_test.cpp  makefile  multiplexer.cpp  multiplexer.h  tca9543a.cpp  tca9543a.h
mbed/i2c_test/NUCLEO_F303K8/: i2c_test.disasm  i2c_test.elf  i2c_test.hex
mbed/kinesthetix/: main.cpp  makefile
mbed/kinesthetix/Classed/: Kinesthetix.cpp  Kinesthetix.hpp  main.cpp
mbed/lra_pwm_test/: lra_pwm_test.cpp  makefile
mbed/lra_pwm_test/NUCLEO_F303K8/: lra_pwm_test.d  lra_pwm_test.disasm  lra_pwm_test.elf  lra_pwm_test.hex
mbed/lra_test/: drv2605.h  lra_test.cpp  makefile
mbed/lra_test/NUCLEO_F303K8/: drv2605.d  lra_test.d  lra_test.disasm  lra_test.elf  lra_test.hex
opencv_early_tests/: make.bash
opencv_early_tests/include/: led_tracker.hpp
opencv_led_tracker/: CMakeLists.txt  main.cpp
opencv_led_tracker/src/: led_tracker.cpp
opencv_led_tracker_prototype/: CMakeLists.txt  main.cpp
opencv_led_tracker_prototype/include/: led_tracker.hpp
opencv_led_tracker_prototype/src/: camera.cpp  led_tracker.cpp
template_matching_test/: CMakeLists.txt  main.cpp
template_matching_test/include/: camera.hpp  led_tracker.hpp
webserver/: CMakeLists.txt  client_main.cpp  generate_ctags.sh  main.cpp  server_main.cpp
webserver/include/: connection_manager.hpp  data_manager.hpp  feedback_calculator.hpp  message_processor.hpp
webserver/src/: connection_manager.cpp  feedback_calculator.cpp  message_processor.cpp
