<?xml version="1.0"?>
<package format="2">
  <name>cynaptix</name>
  <version>0.0.0</version>
  <description>The cynaptix package for ME3 DMT</description>

  <maintainer email="nrh16@ic.ac.uk">Nick Hafner</maintainer>

  <license>MIT</license>

  <depend>roscpp</depend>
  <depend>std_msgs</depend>
  <depend>geometry_msgs</depend>
  <depend>sensor_msgs</depend>
  <depend>tf2</depend>
  <depend>tf2_ros</depend>
  <depend>image_transport</depend>
  <depend>cv_bridge</depend>

  <exec_depend>message_runtime</exec_depend>
  <exec_depend>usb_cam</exec_depend>
  <exec_depend>find_object_2d</exec_depend>

  <buildtool_depend>catkin</buildtool_depend>

</package>
