<?xml version="1.0"?>
<package format="2">
  <name>cynaptix</name>
  <version>0.0.0</version>
  <description>The cynaptix package for ME3 DMT</description>

  <maintainer email="nrh16@ic.ac.uk">Nick Hafner</maintainer>

  <license>MIT</license>

  <depend>roscpp</depend>
  <depend>rpspy</depend>
  <depend>std_msgs</depend>
  <depend>geometry_msgs</depend>
  <depend>sensor_msgs</depend>
  <depend>visualization_msgs</depend>
  <depend>tf2</depend>
  <depend>tf2_ros</depend>
  <depend>tf2_geometry_msgs</depend>
  <depend>image_transport</depend>
  <depend>cv_bridge</depend>
  
  <build_depend>message_generation</build_depend>

  <exec_depend>message_runtime</exec_depend>
  <exec_depend>usb_cam</exec_depend>
  <exec_depend>rviz</exec_depend>

  <buildtool_depend>catkin</buildtool_depend>

</package>
